--- a/.github/workflows/boot.yml
+++ b/.github/workflows/boot.yml
@@ -14,5 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: make ./bootloader/
+    - name: Install Dependencies
+      run: |
+      sudo apt-get update
+      sudo apt-get install make nasm
+
+    - name: Make OS
+      run: make ./os.bin
